# University-Algorithmization-Course-2

./: CMakeLists.txt
2025/10/10/: CMakeLists.txt  hw.cpp
2025/10/10/lib/inc/: glazunova_5_2_basic_lib.h  glazunova_5_2_middle_lib.h
2025/10/10/lib/src/: glazunova_5_2_basic_lib.cpp  glazunova_5_2_middle_lib.cpp
2025/10/17/: hw.cpp
2025/10/24/: cw.cpp
2025/10/3/: hw.cpp
2025/10/31/: cw.cpp  hw.cpp
2025/11/14/: cw.cpp  hw.cpp
2025/11/21/: hw.cpp
2025/11/28/: cw.cpp  hw.cpp
2025/11/7/: hw.cpp
2025/12/12/: hw.cpp
2025/12/5/: hw.cpp
2025/9/week-1/: CMakeLists.txt  task1.cpp
2025/9/week_3/: main.cpp
2025/9/week_4/: hw.cpp  sro.cpp
sro/: rk2.cpp  sro.cpp  sro2_rk1.cpp  sro3.cpp  sro4.cpp  sro5.cpp
